# dezap

./: .gitignore  Cargo.toml  README.md
config/: example.toml
docs/: architecture.md  cli.md  configuration.md  network.md  overview.md  security.md  tui.md
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  net.rs  protocol.rs  service.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: net.rs
